# flowfusion

./: CITATION.md  README.md  demo_diffusion.ipynb  demo_flow.ipynb  diffusion.py  flow.py  flow_matching_test.ipynb  pyproject.toml
docs/: diffusion.md  flow.md  symplectic.md
flowfusion/: diffusion.py  flow.py  symplectic.py  symplectic_flow.py  train_symplectic.py
tests/: test.py
