[project]
name = "flowfusion"
version = "0.1.0"
description = "Generative modelling with diffusion and flow matching"
authors = [
    {name = "Justing Alsing, Stephen Thorp, Gurjeet Jagwani"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torchdiffeq (>=0.2.5,<0.3.0)",
    "torch (>=2.7.0,<3.0.0)",
    "numpy (>=1.23)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
